--- a/index.html
+++ b/index.html
@@ -138,20 +138,7 @@
           the foundational and sophisticated features of Google Sheets.
         </p>
       </div>
-      <div class="image-container">
-        <div class="image image1">
-          <img
-            src="https://i.pinimg.com/236x/da/40/4b/da404bf7bd4398c9f256c65507d3c860.jpg"
-            alt="Food Photo"
-          />
-        </div>
-        <div class="image image2">
-          <img
-            src="https://i.pinimg.com/236x/12/c4/18/12c418b6fd30129d0d52e444208b74a3.jpg"
-            alt="Food Photo"
-          />
-        </div>
-      </div>
+
     </div>
     <!--End About Us-->
 
@@ -177,32 +164,6 @@
           <div class="box-image">
             <img src="" alt="Food Photo" />
           </div>
-        </div>
-      </div>
-      <div class="menu-image-container">
-        <div class="image active">
-          <img
-            src="https://i.pinimg.com/236x/1d/5f/78/1d5f787f8e52563f2d1cced36028a4d7.jpg"
-            alt="Food Photo"
-          />
-        </div>
-        <div class="image">
-          <img
-            src="https://i.pinimg.com/236x/04/de/1f/04de1f4f599353783598ed5fafb9fb13.jpg"
-            alt="Food Photo"
-          />
-        </div>
-        <div class="image">
-          <img
-            src="https://i.pinimg.com/236x/e4/56/94/e4569443714172f2773aea229195685c.jpg"
-            alt="Food Photo"
-          />
-        </div>
-        <div class="image">
-          <img
-            src="https://i.pinimg.com/236x/bf/66/3c/bf663c8f441c4a6ea29345837939a968.jpg"
-            alt="Food Photo"
-          />
         </div>
       </div>
       <div class="text" id="section3">
@@ -247,20 +208,6 @@
         </p>
         <div><a class="a-CTA" href="#">Access Courses</a></div>
       </div>
-      <div class="image-container">
-        <div class="image image1">
-          <img
-            src="https://i.pinimg.com/236x/91/3e/19/913e19a54295550870c1e2ea0f38a49b.jpg"
-            alt="Food Photo"
-          />
-        </div>
-        <div class="image image2">
-          <img
-            src="https://i.pinimg.com/236x/7e/30/80/7e3080a412543e2bcd49583f282f7dcc.jpg"
-            alt="Food Photo"
-          />
-        </div>
-      </div>
     </div>
     <!--End About Us-->
     <div class="fixed-image">
@@ -297,17 +244,44 @@
                     <li></li>
                     <li>Access Content</li>
                     <li>Free Updates</li>
-                    <li>Certificate</li>
+                    <li>Certification</li>
                   </ul>
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-12 md-mt-5">
+              <div class="price-table">
+                <div class="price-inside">Advanced</div>
+                <div class="price-header">
+                  <div class="price-value">
+                    <h2><span>DNT</span>130</h2>
+                    <span>Advanced Plan</span>
+                  </div>
+                  <h3 class="price-title">Advanced</h3>
+                </div>
+                <a
+                  class="btn btn-theme btn-circle my-4"
+                  href="https://wa.me/21695025296?text=Hello%2C%20I%27m%20interested%20in%20your%20GoogleSheet Courses , I want the 120DT pro plan "
+                  data-text="Purchase Now"
+                >
+                  <span>P</span><span>u</span><span>r</span><span>c</span
+                  ><span>h</span><span>a</span><span>s</span><span>e</span>
+                  <span> </span><span>N</span><span>o</span><span>w</span>
+                </a>
+                <div class="price-list">
+                  <ul class="list-unstyled">
+                    <li></li>
+                    <li>access to advanced courses</li>
+                    <li>Real-time interaction</li>
+                    <li>Early bird bonus</li>
+                    <li>Certification</li>
+                  </ul>
+                </div>
+              </div>
               <div class="price-table">
                 <div class="price-inside">Professional</div>
                 <div class="price-header">
                   <div class="price-value">
-                    <h2><span>DNT</span>120</h2>
+                    <h2><span>DNT</span>180</h2>
                     <span>Pro Plan</span>
                   </div>
                   <h3 class="price-title">Professional</h3>
@@ -327,7 +301,7 @@
                     <li>Unlimited access to all courses</li>
                     <li>Real-time interaction</li>
                     <li>Early bird bonus</li>
-                    <li>24/7 Support</li>
+                    <li>Certification</li>
                   </ul>
                 </div>
               </div>
